[package]
name = "mio-uds"
version = "0.6.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/mio-uds"
homepage = "https://github.com/alexcrichton/mio-uds"
documentation = "https://docs.rs/mio-uds"
description = """
Unix domain socket bindings for mio
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "alexcrichton/mio-uds" }

[target."cfg(unix)".dependencies]
libc = "0.2.42"
[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
iovec = "0.1"
mio = { git = "https://gitlab.redox-os.org/redox-os/mio" }

[dev-dependencies]
tempdir = "0.3"
